name:                yapper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ajaysusarla/yapper
license:             BSD3
license-file:        LICENSE
author:              Partha Susarla
maintainer:          mail@spartha.org
copyright:           Copyright Partha Susarla (c) 2017
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable yapper
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
