name:                yapper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ajaysusarla/yapper
license:             BSD3
license-file:        LICENSE
author:              Partha Susarla <mail@spartha.org>
maintainer:          Partha Susarla <mail@spartha.org>
copyright:           Copyright Partha Susarla (c) 2017
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:
extra-source-files:  README.md

source-repository head
  type:     git
  location: https://github.com/ajaysusarla/yapper

library
  ghc-options:         -Wall
  exposed-modules:     Yapper.OptArgs
                     , Yapper.Utils
  other-modules:
                       -- Generated
                       Paths_yapper

  build-depends:       base        >= 4.7  && <5
                     , base-compat >= 0.9  && < 0.10
                     , gitrev      >= 1.3  && < 1.4
                     , filepath    >= 1    && < 2
                     , http-server >= 0.2  && < 2
                     , json        >= 0.4  && < 1
                     , url         >= 2.1  && < 3
                     , utf8-string >= 1.0  && < 1.2
                     , xhtml       >= 3000 && < 3001

  hs-source-dirs:      src
  default-language:    Haskell2010

executable yapper
  main-is:             Main.hs
  ghc-options:         -rtsopts -O2
  default-language:    Haskell2010
  hs-source-dirs:      main
  build-depends:       base >= 4.7 && < 5
                     , yapper

test-suite tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      tests
  build-depends:       base
                     , yapper
                     , hspec
  default-language:    Haskell2010